Move measures of distance to its own vignette.

--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -167,40 +167,7 @@ during recombination.
 
 # Measures of distance
 
-## Synteny index
-
-Ad-hoc index measuring to what extent a scaffold of the _target_ genome is
-mostly aligned to a single scaffold in the _query_ genome.   See
-`?GenomicBreaks::synteny_index` for details.  One limitation to the use of this
-index is that it requires that at least the _query_ genome is a complete
-chromosome assembly.
-
-```{r}
-sapply(gbs, synteny_index)
-sapply(gbs, \(g) swap(g) |> synteny_index())
-```
-
-## Correlation
-
-Ad-hoc index measuring the correlation of the coordinates of the syntenic
-alignments in scaffolds of a _target_ genome and their best match in the
-_query_ genome.  See `?GenomicBreaks::correlation_index` for details.  It is
-intended to be more robust to the presence of uncollapsed haplotypes in the
-_query_ genome but probably needs further testing.
-
-```{r}
-sapply(gbs, correlation_index)
-sapply(gbs, \(g) swap(g) |> correlation_index())
-```
-
-## Gene Order Conservation
-
-See `?GOC` for details.
-
-```{r goc}
-sapply(gbs, GOC)
-sapply(gbs, \(g) swap(g) |> GOC())
-```
+See `vignette("DistanceMeasures"), package="OikSyntenies"`.
 
 # Phylogenetic cladogram
 
