--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -379,23 +379,31 @@ Interval regions interrupt alignments or colinearity.  What do they contain ?
 
 ```{r unaligned_regions}
 reps <- rtracklayer::import(system.file("extdata/Annotations/OKI2018_I69.v2/OKI2018_I69.repeats.gff", package = "BreakpointsData"))
-# Make sure we match both strands
-strand(reps) <- '*'
+reps$Class <- reps$Target |>
+  sub(pat = '".*', rep = "") |>
+  sub(pat = "Motif:", rep = "") |>
+  sub(pat = "\\(.+)n", rep = "tandem") |>
+  sub(pat = "_family.*", rep = "") |>
+  sub(pat = "SINE.*", rep = "SINE") |>
+  sub(pat = "i69_juicer.*", rep = "unknown") |>
+  sub(pat = ".*-rich", rep = "LowComplexity") |>
+  sub(pat = "rnd.*", rep = "rnd") |>
+  factor()
 
-# Unique regions in the OKI genome that contain repeated elements.
-reps <- reduce(reps)
+table(reps$Class)
 
+reps.reduced <- reduce(reps, ignore.strand = TRUE)
 # They are short.
-summary(width(reps))
+summary(width(reps.reduced))
 
 Oki_pairs <- c("Oki_Osa", "Oki_Bar", "Oki_Kum", "Oki_Aom", "Oki_Nor")
 unal <- sapply(gbs[Oki_pairs], cleanGaps) |> SimpleList()
 
 (reps_gbs <- tibble::tibble(
     pairname   = Oki_pairs,
-    total      = length(reps),
-    match_unal = sapply(unal[Oki_pairs], \(gb) length(subsetByOverlaps(reps, gb))),
-    match_al   = sapply(gbs[Oki_pairs], \(gb) length(subsetByOverlaps(reps, gb))),
+    total      = length(reps.reduced),
+    match_unal = sapply(unal[Oki_pairs], \(gb) length(subsetByOverlaps(reps.reduced, gb))),
+    match_al   = sapply(gbs[Oki_pairs], \(gb) length(subsetByOverlaps(reps.reduced, gb))),
     aligned   = match_al   / total * 100,
     unaligned = match_unal / total * 100,
     sum = aligned + unaligned
@@ -418,9 +426,9 @@ unal_c <- sapply(coa[Oki_pairs], cleanGaps) |> SimpleList()
 
 (reps_coa <- tibble::tibble(
     pairname    = Oki_pairs,
-    total       = length(reps),
-    match_unmap = sapply(unal_c[Oki_pairs], \(gb) length(subsetByOverlaps(reps, gb))),
-    match_map   = sapply(   coa[Oki_pairs], \(gb) length(subsetByOverlaps(reps, gb))),
+    total       = length(reps.reduced),
+    match_unmap = sapply(unal_c[Oki_pairs], \(gb) length(subsetByOverlaps(reps.reduced, gb))),
+    match_map   = sapply(   coa[Oki_pairs], \(gb) length(subsetByOverlaps(reps.reduced, gb))),
     mapped      = match_map   / total * 100,
     unmapped    = match_unmap / total * 100,
     sum = mapped + unmapped
@@ -434,6 +442,66 @@ ggplot(reps_coa |> tidyr::pivot_longer(c("mapped", "unmapped"))) +
   xlab("Matching to region:") +
   geom_boxplot() +
   geom_point(aes(col = pairname))
+```
+
+## Repeat annotations
+
+```{r repeat_annotations}
+reps_in <- list()
+reps_in$total <- sapply(Oki_pairs, \(.) table(reps$Class)) 
+reps_in$unal <- sapply(unal[Oki_pairs], \(gb) {
+    ov <- subsetByOverlaps(reps, gb, ignore.strand = TRUE)
+    table(ov$Class)
+  })
+reps_in$gbs <- sapply(gbs[Oki_pairs], \(gb) {
+    ov <- subsetByOverlaps(reps, gb, ignore.strand = TRUE)
+    table(ov$Class)
+  })
+reps_in$unmap <- sapply(unal_c[Oki_pairs], \(gb) {
+    ov <- subsetByOverlaps(reps, gb, ignore.strand = TRUE)
+    table(ov$Class)
+  })
+reps_in$map <- sapply(coa[Oki_pairs], \(gb) {
+    ov <- subsetByOverlaps(reps, gb, ignore.strand = TRUE)
+    table(ov$Class)
+  })
+
+toLong <- function(m, Region = NULL) {
+  m <- tibble::as_tibble(m, rownames = "Class") |>
+    tidyr::pivot_longer(c("Oki_Osa", "Oki_Bar", "Oki_Aom", "Oki_Nor"))
+  if (! is.null(Region))
+    m <- dplyr::mutate(m, Region = Region)
+  m
+}
+
+reps_in.norm <- lapply(reps_in, \(x) x / reps_in$total)
+
+
+reps_in.long <- rbind(
+  toLong(reps_in$unmap, "unmap"),
+  toLong(reps_in$map,   "map"),
+  toLong(reps_in$gbs,   "gbs"),
+  toLong(reps_in$unal, "unal")
+)
+
+reps_in.norm.long <- rbind(
+  toLong(reps_in.norm$unmap, "unmap"),
+  toLong(reps_in.norm$map,   "map"),
+  toLong(reps_in.norm$gbs,   "gbs"),
+  toLong(reps_in.norm$unal, "unal")
+)
+
+ggplot(reps_in.long) +
+  aes(Region, value) +
+  geom_point(aes(col = name)) +
+  facet_grid(~Class, scales = "free")
+
+ggplot(reps_in.norm.long) +
+  aes(Region, value) +
+  geom_point(aes(col = name)) +
+  facet_grid(~Class, scales = "free") +
+  ylab("Fraction overlaping") +
+  ggtitle("Repeats overlaping with (un)aligned/mapped regions")
 ```
 
 # Pairwise chromosome plots
