--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -236,140 +236,7 @@ sapply(coa, length)
 
 # Width summary plots
 
-The distribution of alignment widths takes a bimodal appearance after
-collapsing.  Is the small peak made of artefacts ?  We will see shortly that the
-answer is _no_.
-
-```{r width_after_coalescing}
-width2df <- function(where, what, gbl) {
-  gb <- gbl[[where]]
-  if (length(gb) == 0) return (NULL)
-  data.frame(where = where, what = what, width = width(gb))
-}
-
-df <- rbind(
-  # do.call allows a list to replace "..." in a function call
-  do.call(rbind, lapply(names(gbs), width2df, "aligned", gbs)),
-  do.call(rbind, lapply(names(coa), width2df, "collapsed", coa))
-)
-
-gg_freq_poly <- function(DF) {
-    ggplot(DF |> as("data.frame")) +
-    aes(width) +
-    geom_freqpoly() +
-    scale_x_log10()
-}
-
-gg_freq_poly(df) +
-  aes(col = what) +
-  geom_freqpoly() +
-  scale_x_log10() +
-  facet_wrap(~where, scales = "free_y") +
-  ggtitle("Distribution of alignment width before and after collapsing")
-```
-
-First, the distribution of widths is not the same on long and short arms.
-For this reason, it would be unwise to filter by width on some operations such
-as coalescing.
-
-```{r pre_compute_widths_object}
-widths <- SimpleList()
-makeWidthsDF <- function (objList) {
-  lapply(names(objList), \(name) {
-    DF <- mcols(objList[[name]])
-    DF$name  <- name
-    DF$width <- width(objList[[name]])
-    DF$chr   <- seqnames(objList[[name]]) |>  sub(pat = "Chr", rep = "chr")
-    DF$query <- DF$score <- NULL
-    DF
-  }) |> do.call(what=rbind)
-}
-
-widths$gbs  <- makeWidthsDF(gbs)
-widths$coa  <- makeWidthsDF(coa)
-widths$coa2 <- makeWidthsDF(coa2)
-```
-
-## Aligned regions
-
-```{r widths_gbs}
-gg_freq_poly(widths$gbs) +
-  aes(col=Arm) +
-  facet_wrap(~chr, scales = "free_y") +
-  ggtitle("Distribution of alignment widths before collapsing, split by arm.")
-
-gg_freq_poly(widths$gbs |> subset(chr == "chr1")) +
-  aes(col=Arm) +
-  facet_wrap(~name, scales = "free_y", ncol=5) +
-  ggtitle("Distribution of alignment widths on chr1 before collapsing, split by genome pair")
-```
-
-## Unaligned regions
-
-```{r widths_unaligned}
-unal <- sapply(gbs, cleanGaps) |> SimpleList()
-unal[ 1:5]  <- sapply(unal[ 1:5],  flagLongShort, longShort$Oki)
-unal[ 6:10] <- sapply(unal[ 6:10], flagLongShort, longShort$Osa)
-unal[11:15] <- sapply(unal[11:15], flagLongShort, longShort$Bar)
-widths$unal  <- makeWidthsDF(unal)
-
-gg_freq_poly(widths$unal) +
-  aes(col=Arm) +
-  facet_wrap(~chr, scales = "free_y") +
-  ggtitle("Distribution of unaligned regions width before collapsing, split by arm.")
-
-gg_freq_poly(widths$unal |> subset(chr == "chr1")) +
-  aes(col=Arm) +
-  facet_wrap(~name, scales = "free_y", ncol=5) +
-  ggtitle("Distribution of unaligned regions width on chr1 before collapsing, split by genome pair")
-```
-
-## Coalesced regions
-
-After coalescing, width distribution becomes clearly bimodal, when faceted by
-chromosome and arm type.  There is a small peak under 500 bp, found on all arms
-except YSR.  The second peak shows two different distributions for long and
-short arms.
-
-```{r width_of_coalesced_regions}
-gg_freq_poly(widths$coa) +
-  aes(col=Arm) +
-  facet_wrap(~chr, scales = "free_y") +
-  ggtitle("Distribution of alignment widths after collapsing, split by arm.")
-
-gg_freq_poly(widths$coa |> subset(chr == "chr1")) +
-  aes(col=Arm) +
-  facet_wrap(~name, scales = "free_y", ncol=5) +
-  ggtitle("Distribution of alignment widths on chr1 after collapsing, split by genome pair") +
-  geom_vline(xintercept = 500)
-```
-
-Therefore, if the first peak represents events that we do not want to consider
-breaking synteny (either alignment artefacts or insertion/transpositions of
-short mobile elements), we can re-coalesce once after removing the shortest
-intervals.
-
-The computation is done in `vignette("Load genomic break data")`
-
-```{r double_coalescing_algorithm}
-sapply(gbs, length)
-sapply(coa, length)
-sapply(coa2, length)
-```
-
-## Double-coalesced regions
-
-```{r re_coalesce}
-gg_freq_poly(widths$coa2) +
-  aes(col=Arm) +
-  facet_wrap(~chr, scales = "free_y") +
-  ggtitle("Distribution of alignment widths after double-collapsing, split by arm.")
-
-gg_freq_poly(widths$coa2 |> subset(chr == "chr1")) +
-  aes(col=Arm) +
-  facet_wrap(~name, scales = "free_y", ncol=5) +
-  ggtitle("Distribution of alignment widths on chr1 after double-collapsing, split by genome pair") 
-```
+See `vignette("RegionWidths"), package="OikSyntenies"`.
 
 # Analysis of the interval regions
 
