--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -30,43 +30,7 @@ library('OikScrambling') |> suppressPackageStartupMessages()
 (load("BreakPoints.Rdata"))
 ```
 
-# Width summary plots
-
-The distribution of alignment widths takes a bimodal appearance after
-collapsing.  Is the small peak made of artefacts ?  We will see shortly that the
-answer is _no_.
-
-```{r width_after_coalescing}
-width2df <- function(where, what, gbl) {
-  gb <- gbl[[where]]
-  if (length(gb) == 0) return (NULL)
-  data.frame(where = where, what = what, width = width(gb))
-}
-
-df <- rbind(
-  # do.call allows a list to replace "..." in a function call
-  do.call(rbind, lapply(names(gbs), width2df, "aligned", gbs)),
-  do.call(rbind, lapply(names(coa), width2df, "collapsed", coa))
-)
-
-gg_freq_poly <- function(DF) {
-    ggplot(DF |> as("data.frame")) +
-    aes(width) +
-    geom_freqpoly() +
-    scale_x_log10()
-}
-
-gg_freq_poly(df) +
-  aes(col = what) +
-  geom_freqpoly() +
-  scale_x_log10() +
-  facet_wrap(~where, scales = "free_y") +
-  ggtitle("Distribution of alignment width before and after collapsing")
-```
-
-First, the distribution of widths is not the same on long and short arms.
-For this reason, it would be unwise to filter by width on some operations such
-as coalescing.
+# Precompute widths
 
 ```{r pre_compute_widths_object}
 widths <- SimpleList()
@@ -85,6 +49,36 @@ widths$gbs  <- makeWidthsDF(gbs)
 widths$coa  <- makeWidthsDF(coa)
 widths$coa2 <- makeWidthsDF(coa2)
 ```
+
+# Width of aligned and mapped regions
+
+_Aligned_ means "before coalescing" and _mapped_ means "after coalescing".
+
+The distribution of alignment widths takes a bimodal appearance after
+collapsing.  Is the small peak made of artefacts ?  We will see shortly that the
+answer is _no_.
+
+```{r width_after_coalescing}
+gg_freq_poly <- function(DF) {
+    ggplot(DF |> as("data.frame")) +
+    aes(width) +
+    geom_freqpoly() +
+    scale_x_log10()
+}
+
+gg_freq_poly(rbind(widths$gbs |> as.data.frame()|> dplyr::mutate(what = "aligned"),
+                   widths$coa |> as.data.frame()|> dplyr::mutate(what = "maped"),
+                   widths$coa2|> as.data.frame()|> dplyr::mutate(what = "doublecoalesced"))) +
+  aes(col = what) +
+  geom_freqpoly() +
+  scale_x_log10() +
+  facet_wrap(~name, scales = "free_y") +
+  ggtitle("Distribution of alignment width before and after collapsing")
+```
+
+First, the distribution of widths is not the same on long and short arms.
+For this reason, it would be unwise to filter by width on some operations such
+as coalescing.
 
 ## Aligned regions
 
