--- a/vignettes/PWM.Rmd
+++ b/vignettes/PWM.Rmd
@@ -319,7 +319,7 @@ GLAM2 search of the gap sequences did not return a motif similar to "AAGCsGCwwmk
 Disappointingly, the motif is found equally in gaps and inversions when searched
 with its PWM.
 
-```{r }
+```{r PWM_score_on_chrs, warning=FALSE}
 # No exact match
 vmatchPattern("rAAGCsGCwwmkCGrCTTyn", OKI2018_I69)
 
@@ -331,20 +331,22 @@ sapply(pwmHits, length)
 hist(pwmHits$Oki$score)
 hist(pwmHits$Osa$score)
 
+pwmHit <- pwmHits$Oki
+
 library("Gviz")
 options(ucscChromosomeNames=FALSE)
 gen <- GenomeAxisTrack(name = "genome")
 a <- AnnotationTrack(longShort$Oki, chromosome = "chr1")
-trk <- DataTrack(pwmHits |> (\(.){strand(.)<-"*";.})(), name = "pwmHits", chromosome = "chr1")
+trk <- DataTrack(pwmHit |> (\(.){strand(.)<-"*";.})(), name = "pwmHits", chromosome = "chr1")
 plotTracks(list(gen, a, trk))
 a <- AnnotationTrack(longShort$Oki, chromosome = "chr2")
-trk <- DataTrack(pwmHits |> (\(.){strand(.)<-"*";.})(), name = "pwmHits", chromosome = "chr2")
+trk <- DataTrack(pwmHit |> (\(.){strand(.)<-"*";.})(), name = "pwmHits", chromosome = "chr2")
 plotTracks(list(gen, a, trk))
 a <- AnnotationTrack(longShort$Oki, chromosome = "PAR")
-trk <- DataTrack(pwmHits |> (\(.){strand(.)<-"*";.})(), name = "pwmHits", chromosome = "PAR")
+trk <- DataTrack(pwmHit |> (\(.){strand(.)<-"*";.})(), name = "pwmHits", chromosome = "PAR")
 plotTracks(list(gen, a, trk))
 a <- AnnotationTrack(longShort$Oki, chromosome = "XSR")
-trk <- DataTrack(pwmHits |> (\(.){strand(.)<-"*";.})(), name = "pwmHits", chromosome = "XSR")
+trk <- DataTrack(pwmHit |> (\(.){strand(.)<-"*";.})(), name = "pwmHits", chromosome = "XSR")
 plotTracks(list(gen, a, trk))
 ```
 
