use triple-colon operator.

--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -25,8 +25,8 @@ TBW
 
 ```{r load_packages_and_data}
 library('OikScrambling') |> suppressPackageStartupMessages()
-(genomes <- OikScrambling::loadAllGenomes())
-(annots <- OikScrambling::loadAllAnnotations() |> suppressWarnings())
+(genomes <- OikScrambling:::loadAllGenomes())
+(annots <- OikScrambling:::loadAllAnnotations() |> suppressWarnings())
 (load("BreakPoints.Rdata"))
 ```
 
