--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -185,6 +185,48 @@ unmap[ 6:10] <- sapply(unmap[ 6:10], annotateWithReps.GRanges, reps$Osa)
 unmap[11:15] <- sapply(unmap[11:15], annotateWithReps.GRanges, reps$Bar)
 ```
 
+Mapped unaligned regions
+------------------------
+
+We can pair the unaligned regions that are between two colinearly aligned regions.
+
+```{r mappedUnaligned}
+filterMappedUnaligned <- function(gb) {
+  colinearRegions <- filterColinearRegions(flagColinearAlignments(gb), rename = FALSE)
+  # Turning the sequence of [(TRUE)n, FALSE]n into indices.
+  idx <- c(0, head(cumsum(!colinearRegions$colinear), -1))
+  gbl <- split(colinearRegions, idx)
+  unalMap <- endoapply(gbl, \(gb)
+    # Need to subtract 1 because some ranges are adjacent (no gap)
+    GBreaks(target = cleanGaps(gb      - 1),
+            query  = cleanGaps(gb$query -1))
+  ) |> unlist()
+  names(unalMap) <- NULL
+  unalMap
+}
+
+unalMap <- sapply(gbs, filterMappedUnaligned) |> as("SimpleList")
+
+unalMap[ 1:5 ] <- sapply(unalMap[ 1:5 ], flagLongShort, longShort$Oki)
+unalMap[ 6:10] <- sapply(unalMap[ 6:10], flagLongShort, longShort$Osa)
+unalMap[11:15] <- sapply(unalMap[11:15], flagLongShort, longShort$Bar)
+
+unalMap$Oki_Osa <- unalMap$Oki_Osa |> annotateWithReps.GBreaks(reps$Oki, reps$Osa)
+unalMap$Oki_Bar <- unalMap$Oki_Bar |> annotateWithReps.GBreaks(reps$Oki, reps$Bar)
+unalMap$Oki_Kum <- unalMap$Oki_Kum |> annotateWithReps.GBreaks(reps$Oki, reps$Kum)
+unalMap$Oki_Aom <- unalMap$Oki_Aom |> annotateWithReps.GBreaks(reps$Oki, reps$Aom)
+
+unalMap$Osa_Oki <- unalMap$Osa_Oki |> annotateWithReps.GBreaks(reps$Osa, reps$Oki)
+unalMap$Osa_Bar <- unalMap$Osa_Bar |> annotateWithReps.GBreaks(reps$Osa, reps$Bar)
+unalMap$Osa_Kum <- unalMap$Osa_Kum |> annotateWithReps.GBreaks(reps$Osa, reps$Kum)
+unalMap$Osa_Aom <- unalMap$Osa_Aom |> annotateWithReps.GBreaks(reps$Osa, reps$Aom)
+
+unalMap$Bar_Oki <- unalMap$Bar_Oki |> annotateWithReps.GBreaks(reps$Bar, reps$Oki)
+unalMap$Bar_Osa <- unalMap$Bar_Osa |> annotateWithReps.GBreaks(reps$Bar, reps$Osa)
+unalMap$Bar_Kum <- unalMap$Bar_Kum |> annotateWithReps.GBreaks(reps$Bar, reps$Kum)
+unalMap$Bar_Aom <- unalMap$Bar_Aom |> annotateWithReps.GBreaks(reps$Bar, reps$Aom)
+```
+
 Coalesce again
 --------------
 
